ub mannheim theme

--- a/themes/ubmannheim/less/bootprint.less
+++ b/themes/ubmannheim/less/bootprint.less
@@ -127,6 +127,7 @@ header {
     #searchForm {display:none !important}
     .navbar-brand {
       background-image:url('../../images/vufind_logo.png');
+      background-repeat:no-repeat;
       color:transparent;
       height:100px;
       margin-top:5px ;
